# Avero

./: .gitignore  ACC_MATCH.md  AGENTS.md  ANALYSIS_README.txt  CLAUDE.md  CODEBASE_REVIEW.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  JOURNEY_REQUIREMENTS.md  NOTES_ON_ACC.md  PERF_INVESTIGATION.md  POS_MIGRATION_PLAN.md  POS_TRACKING.md  RALPH_PROMPT.md  REFACTOR_ROADMAP.md  REQUIREMENTS.md  STITCH_EXAMPLES.txt  STITCH_GAP_ANALYSIS.md  STITCH_GAP_ANALYSIS_SUMMARY.txt  VERIFICATION_REPORT.md  build.rs  clippy.toml  grafana-tasks.md  pos.md  prd.json  rustfmt.toml  stitch_data.csv  test-todo.md  xovis.html
.agents/ralph/: PROMPT_build.md  loop.sh
.agents/tasks/: acc-monitor-in-command.json  acc-monitor-in-command.md  acc-viewermonitor-in-command.json  fix-command-dashboard.md  fix-dashboard-in-commande18nnet.json
.cargo/: config.toml
.claude/: ralph-loop.local.md
.claude/commands/: deploy.md
.claude/skills/: build.md  deploy-netto.md  deploy-tui-avero.md  deploy-tui-netto.md
.claude/skills/deploy-command/: skill.md
.claude/skills/deploy-netto/: SKILL.md
.claude/skills/deploy-tui-avero/: SKILL.md
.claude/skills/deploy-tui-netto/: SKILL.md
.ralph-tui/: config.toml
bench/: README.md  build.sh  prd-test.json  progress-bench.txt  progress.txt  prompt-bench.md  run-experiment.sh
bench/go/: go.mod  main.go
bench/rust/: Cargo.toml
bench/rust/src/: main.rs
bench/scripts/ralph/: progress.txt  prompt.md  ralph.sh
command/: Dockerfile.dev  mix.exs
command/.claude/skills/: deploy-avero.md  deploy-command.md  deploy-netto.md
command/assets/: tailwind.config.js
command/assets/css/: app.css
command/assets/js/: app.js
command/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
command/lib/: avero_command_web.ex
command/test/: test_helper.exs
config/: avero.toml  dev.toml  grandi.toml  mosquitto.conf  mosquitto.passwd  netto.toml  sim.toml
docs/: gateway-analysis.md
gateway-analysis/: CLAUDE.md  gateway-analysis.stdout  pos_timeline.py
grafana/: avero-hq-latency.json  command-live.json  data-explorer.json  gates-realtime.json  gateway-dashboard.json  netto-grandi.json  system-stats.json
grafana/alerting/: gateway-alerts.yaml
grafana/archive/: AVERO-HQ-gateway.json  NETTO-GRANDI-system.json  loss-prevention.json  netto-grandi.json
grafana/backup-20260111/: AVERO-HQ-system.json  AVERO-HQ-timescale.json  NETTO-GRANDI-gateway.json  NETTO-GRANDI-timescale.json  avero-hq-live.json  netto-grandi.json
scripts/: 001-overlap-group-detection.md  002-group-size-cap.md  003-exit-grace-period.md  004-acc-buffering.md  005-unit-tests.md  006-verify-deploy.md  acc-exit-window-analyze.py  acc-exit-window-report.py  acc-group-diff.py  acc-group-eval.py  acc-group-report.py  acc-person0-analysis.py  acc-person0-positions.py  acc-person0-summary.py  acc-person2-review.py  acc-person2-review.sh  acc-replay-analysis.py  chat-journeys.py  deploy-avero.sh  deploy-command.sh  deploy-grafana.sh  deploy-netto.sh  deploy-tui-avero.sh  deploy-tui-netto.sh  diagnose-journeys.sh  fetch-geometries.sh  gate_test.py  migrate-service-name.sh  monitor_acc.sh  query-journeys-db.sh  requirements.txt  review-issues.sh  run-acc-group-eval.sh
scripts/issues/: .gitignore  README.md
scripts/ralph/: log.txt  pin.md  prd.json  prd.old  progress.txt  prompt.md  ralph.sh
src/: lib.rs  main.rs
src/domain/: journey.rs  mod.rs  types.rs
src/infra/: broker.rs  config.rs  metrics.rs  mod.rs
src/io/: acc_listener.rs  analysis_logger.rs  cloudplus.rs  egress.rs  egress_channel.rs  mod.rs  mqtt.rs  mqtt_egress.rs  prometheus.rs  rs485.rs
src/services/: acc_collector.rs  door_correlator.rs  gate.rs  gate_worker.rs  journey_manager.rs  mod.rs  pos_occupancy.rs  reentry_detector.rs  stitcher.rs
tests/: config_test.rs
tools/: analyze_logs.sh  baseline_test.py  traffic_generator.py
(+1778 files in other folders)
