[package]
name = "gateway-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway-poc"
path = "src/main.rs"

[[bin]]
name = "gateway-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "gate_test"
path = "src/bin/gate_test.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
rumqttd = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-serial = "5.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
base64 = "0.22"
uuid = { version = "1", features = ["v7"] }
bytes = "1"
parking_lot = "0.12"
# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
lto = true
codegen-units = 1
